# fai-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  test_distributed_vc.sh  test_fai.sh  test_multichunk.sh  test_multichunk_debug.sh  test_network_manual.sh  test_p2p_transfer.sh
.fai/: db.sqlite  metadata.db
.github/workflows/: test.yml
docs/: architecture.md
src/: lib.rs  main.rs
src/database/: mod.rs
src/network/: mod.rs
src/services/: branch_service.rs  cli_service.rs  mod.rs  security_service.rs  web_service.rs
src/storage/: mod.rs
tests/: integration_tests.rs
