[package]
name = "fai-protocol"
version = "0.2.0"
edition = "2021"
authors = ["FAI Protocol Team"]
description = "A decentralized version control system for AI models and large files"
license = "AGPL-3.0"
repository = "https://github.com/kunci115/fai-protocol"
homepage = "https://github.com/kunci115/fai-protocol"
documentation = "https://docs.rs/fai-protocol"
keywords = ["version-control", "distributed", "p2p", "ai", "models"]
categories = ["development-tools", "network-programming"]
readme = "README.md"

# Exclude large files from package
exclude = [
    "target/**",
    "tests/**",
    "*.profraw",
    "examples/**",
    "benches/**",
    "docs/**",
    ".git/**",
    ".idea/**",
    "*.log",
    "Cargo.lock",
    ".env",
    "PUBLISHING.md",
    "publish_to_crates.sh"
]

[dependencies]

# Optimize for smaller binary size
[profile.release]
lto = true          # Enable Link-Time Optimization (LTO)
codegen-units = "single" # Single compilation unit for better optimization
panic = "abort"      # Remove panic handling code
strip = true          # Remove debug symbols
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.5"
blake3 = "1.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
libp2p = { version = "0.54", features = ["tokio", "tcp", "mdns", "noise", "yamux", "macros", "request-response", "cbor"] }
futures = "0.3"
async-trait = "0.1"

[[bin]]
name = "fai"
path = "src/main.rs"

